# Qwen_runpod_handler

./: .gitignore  README.md
embeddings/: Dockerfile  handler.py  pyproject.toml
rerank/: Dockerfile  handler.py  pyproject.toml
